1.21.1 port fixes