@@ -1,13 +1,17 @@
 package org.violetmoon.quark.addons.oddities.entity;
 
+import net.minecraft.commands.arguments.item.ItemParser;
 import net.minecraft.core.particles.ParticleTypes;
+import net.minecraft.core.registries.Registries;
 import net.minecraft.nbt.CompoundTag;
 import net.minecraft.nbt.ListTag;
 import net.minecraft.network.protocol.Packet;
 import net.minecraft.network.protocol.game.ClientGamePacketListener;
+import net.minecraft.network.protocol.game.ClientboundAddEntityPacket;
 import net.minecraft.network.syncher.EntityDataAccessor;
 import net.minecraft.network.syncher.EntityDataSerializers;
 import net.minecraft.network.syncher.SynchedEntityData;
+import net.minecraft.server.level.ServerEntity;
 import net.minecraft.server.level.ServerLevel;
 import net.minecraft.world.entity.Entity;
 import net.minecraft.world.entity.EntityType;
@@ -17,8 +21,8 @@ import net.minecraft.world.item.ArmorItem;
 import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.item.ShieldItem;
 import net.minecraft.world.item.enchantment.EnchantmentHelper;
+import net.minecraft.world.item.enchantment.Enchantments;
 import net.minecraft.world.level.Level;
-import net.minecraftforge.network.NetworkHooks;
 import org.jetbrains.annotations.NotNull;
 import org.violetmoon.quark.addons.oddities.item.BackpackItem;
 import org.violetmoon.quark.addons.oddities.module.TotemOfHoldingModule;
@@ -52,8 +56,8 @@ public class TotemOfHoldingEntity extends Entity {
 	}
 
 	@Override
-	protected void defineSynchedData() {
-		entityData.define(DYING, false);
+	protected void defineSynchedData(SynchedEntityData.Builder builder) {
+        builder.define(DYING, false);
 	}
 
 	public void addItem(ItemStack stack) {
@@ -74,59 +78,52 @@ public class TotemOfHoldingEntity extends Entity {
 			if(uuid.equals(owner))
 				return player;
 		}
-
 		return null;
 	}
 
 	@Override
-	public boolean skipAttackInteraction(@NotNull Entity e) {
-		if(!level().isClientSide && e instanceof Player player) {
-
-			if(!TotemOfHoldingModule.allowAnyoneToCollect && !player.getAbilities().instabuild) {
-				Player owner = getOwnerEntity();
-				if(e != owner)
-					return false;
-			}
+	public boolean skipAttackInteraction(@NotNull Entity entity) {
+		if (level() instanceof ServerLevel serverLevel && entity instanceof Player player) {
+			if (!TotemOfHoldingModule.allowAnyoneToCollect && !player.hasInfiniteMaterials() && entity != getOwnerEntity()) return false;
 
 			int drops = Math.min(storedItems.size(), 3 + level().random.nextInt(4));
 
-			for(int i = 0; i < drops; i++) {
-				ItemStack stack = storedItems.remove(0);
+			for (int i = 0; i < drops; i++) {
+				ItemStack stack = storedItems.removeFirst();
 
-				if(stack.getItem() instanceof ArmorItem armor) {
+				if (stack.getItem() instanceof ArmorItem armor) {
 					EquipmentSlot slot = armor.getEquipmentSlot();
 					ItemStack curr = player.getItemBySlot(slot);
 
-					if(curr.isEmpty()) {
+					if (curr.isEmpty()) {
 						player.setItemSlot(slot, stack);
 						stack = null;
-					} else if(!(curr.getItem() instanceof BackpackItem) &&
-							!EnchantmentHelper.hasBindingCurse(curr) && !EnchantmentHelper.hasBindingCurse(stack)) {
+					} else if (!(curr.getItem() instanceof BackpackItem)
+							&& !(EnchantmentHelper.getTagEnchantmentLevel(serverLevel.registryAccess().lookupOrThrow(Registries.ENCHANTMENT).getOrThrow(Enchantments.BINDING_CURSE), curr) > 0)
+							&& EnchantmentHelper.getTagEnchantmentLevel(serverLevel.registryAccess().lookupOrThrow(Registries.ENCHANTMENT).getOrThrow(Enchantments.BINDING_CURSE), stack) > 0) {
 						player.setItemSlot(slot, stack);
 						stack = curr;
 					}
-				} else if(stack.getItem() instanceof ShieldItem) {
+				} else if (stack.getItem() instanceof ShieldItem) {
 					ItemStack curr = player.getItemBySlot(EquipmentSlot.OFFHAND);
 
-					if(curr.isEmpty()) {
+					if (curr.isEmpty()) {
 						player.setItemSlot(EquipmentSlot.OFFHAND, stack);
 						stack = null;
 					}
+
 				} else if (Quark.ZETA.isModLoaded("curios")) {
 					stack = TotemOfHoldingCuriosCompat.equipCurios(player, equipedCurios, stack);
 				}
 
-				if(stack != null)
-					if(!player.addItem(stack))
-						spawnAtLocation(stack, 0);
+				if (stack != null && !player.addItem(stack)) {
+					spawnAtLocation(stack, 0);
+				}
 			}
 
-			if(level() instanceof ServerLevel serverLevel) {
-				serverLevel.sendParticles(ParticleTypes.DAMAGE_INDICATOR, getX(), getY() + 0.5, getZ(), drops, 0.1, 0.5, 0.1, 0);
-				serverLevel.sendParticles(ParticleTypes.ENCHANTED_HIT, getX(), getY() + 0.5, getZ(), drops, 0.4, 0.5, 0.4, 0);
-			}
+			serverLevel.sendParticles(ParticleTypes.DAMAGE_INDICATOR, getX(), getY() + 0.5, getZ(), drops, 0.1, 0.5, 0.1, 0);
+			serverLevel.sendParticles(ParticleTypes.ENCHANTED_HIT, getX(), getY() + 0.5, getZ(), drops, 0.4, 0.5, 0.4, 0);
 		}
-
 		return false;
 	}
 
@@ -138,11 +135,9 @@ public class TotemOfHoldingEntity extends Entity {
 	@Override
 	public void tick() {
 		super.tick();
+		if(!isAlive()) return;
 
-		if(!isAlive())
-			return;
-
-		if(TotemOfHoldingModule.darkSoulsMode) {
+		if (TotemOfHoldingModule.darkSoulsMode) {
 			Player owner = getOwnerEntity();
 			if(owner != null && !level().isClientSide) {
 				String ownerTotem = TotemOfHoldingModule.getTotemUUID(owner);
@@ -154,15 +149,13 @@ public class TotemOfHoldingEntity extends Entity {
 		if(storedItems.isEmpty() && !level().isClientSide)
 			entityData.set(DYING, true);
 
-		if(isDying()) {
-			if(deathTicks > DEATH_TIME)
+		if (isDying()) {
+			if (deathTicks > DEATH_TIME)
 				discard();
 			else
 				deathTicks++;
-		}
-
-		else if(level().isClientSide)
-			level().addParticle(ParticleTypes.PORTAL, getX(), getY() + (Math.random() - 0.5) * 0.2, getZ(), Math.random() - 0.5, Math.random() - 0.5, Math.random() - 0.5);
+		} else if (level().isClientSide)
+			level().addParticle(ParticleTypes.PORTAL, getX(), getY() + (this.random.nextDouble() - 0.5) * 0.2, getZ(), Math.random() - 0.5, Math.random() - 0.5, Math.random() - 0.5);
 	}
 
 	private void dropEverythingAndDie() {
@@ -193,13 +186,13 @@ public class TotemOfHoldingEntity extends Entity {
 
 		for(int i = 0; i < list.size(); i++) {
 			CompoundTag cmp = list.getCompound(i);
-			ItemStack stack = ItemStack.of(cmp);
+			ItemStack stack = ItemStack.parseOptional(level().registryAccess(), cmp);
 			storedItems.add(stack);
 		}
 
 		for (int i = 0; i < curiosList.size(); i++) {
 			CompoundTag cmp = curiosList.getCompound(i);
-			ItemStack stack = ItemStack.of(cmp);
+			ItemStack stack = ItemStack.parseOptional(level().registryAccess(), cmp);
 			equipedCurios.add(stack);
 		}
 
@@ -215,11 +208,11 @@ public class TotemOfHoldingEntity extends Entity {
 		ListTag curiosList = new ListTag();
 
 		for(ItemStack stack : storedItems) {
-			list.add(stack.serializeNBT());
+			list.add(stack.save(level().registryAccess()));
 		}
 
 		for (ItemStack equipedCurio : equipedCurios) {
-			curiosList.add(equipedCurio.serializeNBT());
+			curiosList.add(equipedCurio.save(level().registryAccess()));
 		}
 
 		compound.put(TAG_ITEMS, list);
@@ -231,7 +224,7 @@ public class TotemOfHoldingEntity extends Entity {
 
 	@NotNull
 	@Override
-	public Packet<ClientGamePacketListener> getAddEntityPacket() {
-		return NetworkHooks.getEntitySpawningPacket(this);
+	public Packet<ClientGamePacketListener> getAddEntityPacket(ServerEntity entity) {
+		return new ClientboundAddEntityPacket(this, entity);
 	}
 }
